--- a/gradle.properties
+++ b/gradle.properties
@@ -7,15 +7,17 @@ org.gradle.configuration-cache=false
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21
-yarn_mappings=1.21+build.9
+
+minecraft_version=1.21.1
+yarn_mappings=1.21.1+build.3
 loader_version=0.18.4
 loom_version=1.14-SNAPSHOT
 
+# Fabric API
+fabric_version=0.116.7+1.21.1
+
 # Mod Properties
-mod_version=0.0.1
+mod_version=1.0
 maven_group=net.zif_tech.more_tools
 archives_base_name=more_tools
 
-# Dependencies
-fabric_version=0.102.0+1.21
